09-ingress/02-traefik-ingress-controller/web-v1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: web-v1
  name: web-v1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    run: web-v1
  type: NodePort
status:
  loadBalancer: {}
