09-ingress/02-traefik-ingress-controller/http-ingress.yaml
# Traefik Ingress example
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    #traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: web-v2
            port:
              name: http
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: web-v1
            port:
              name: http
